{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 119,
  "lineage": "0c5e5989-0997-3348-6195-adef2801fcf1",
  "resources": [
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:612162688656:instance/i-030c6c4a50e2535d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030c6c4a50e2535d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06605a4026c0776bf",
            "private_dns": "ip-10-0-3-176.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.176",
            "public_ip": "3.228.13.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-072a42d442564ae36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c7d24ce70aab417",
            "tags": {
              "Name": "instance1"
            },
            "tags_all": {
              "Name": "instance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d7b197d171a6c2e"
            ]
          },
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_security_group.allow_ssh",
            "module.ec2_instances.module.vpcs.aws_subnet.public_subnets",
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "instance2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:612162688656:instance/i-07edc593bdf3d456a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07edc593bdf3d456a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b9c89c0a038e3036",
            "private_dns": "ip-10-0-4-246.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.246",
            "public_ip": "44.202.84.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01180633ac0836f9d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e6dd02901d43130",
            "tags": {
              "Name": "instance2"
            },
            "tags_all": {
              "Name": "instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d7b197d171a6c2e"
            ]
          },
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_security_group.allow_ssh",
            "module.ec2_instances.module.vpcs.aws_subnet.public_subnets",
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances.module.vpcs",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612162688656:internet-gateway/igw-036fe92895cfb3cf7",
            "id": "igw-036fe92895cfb3cf7",
            "owner_id": "612162688656",
            "tags": {
              "Name": "Internet Gateway link to VPC: vpc-08abc87aba88d4f34"
            },
            "tags_all": {
              "Name": "Internet Gateway link to VPC: vpc-08abc87aba88d4f34"
            },
            "vpc_id": "vpc-08abc87aba88d4f34"
          },
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances.module.vpcs",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_to_ps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612162688656:route-table/rtb-0840a2a7324a6800d",
            "id": "rtb-0840a2a7324a6800d",
            "owner_id": "612162688656",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-036fe92895cfb3cf7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TienTV_Terraform_Route_Table"
            },
            "tags_all": {
              "Name": "TienTV_Terraform_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08abc87aba88d4f34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_internet_gateway.internet_gateway",
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances.module.vpcs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mapping1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0075a880cd3dea591",
            "route_table_id": "rtb-0840a2a7324a6800d",
            "subnet_id": "subnet-04c7d24ce70aab417"
          },
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_internet_gateway.internet_gateway",
            "module.ec2_instances.module.vpcs.aws_route_table.rtb_to_ps",
            "module.ec2_instances.module.vpcs.aws_subnet.public_subnets",
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "mapping2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcfebdb40392e281",
            "route_table_id": "rtb-0840a2a7324a6800d",
            "subnet_id": "subnet-06e6dd02901d43130"
          },
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_internet_gateway.internet_gateway",
            "module.ec2_instances.module.vpcs.aws_route_table.rtb_to_ps",
            "module.ec2_instances.module.vpcs.aws_subnet.public_subnets",
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances.module.vpcs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612162688656:security-group/sg-06d7b197d171a6c2e",
            "description": "Allow sshl inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d7b197d171a6c2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "612162688656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-08abc87aba88d4f34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances.module.vpcs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mapping1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612162688656:subnet/subnet-04c7d24ce70aab417",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c7d24ce70aab417",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "612162688656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08abc87aba88d4f34"
          },
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "mapping2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612162688656:subnet/subnet-06e6dd02901d43130",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e6dd02901d43130",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "612162688656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08abc87aba88d4f34"
          },
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances.module.vpcs",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612162688656:vpc/vpc-08abc87aba88d4f34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-009be8a69e71b270f",
            "default_route_table_id": "rtb-0e285ea9360c353f0",
            "default_security_group_id": "sg-0a203c2b7c95b9d00",
            "dhcp_options_id": "dopt-9a0c3ee0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08abc87aba88d4f34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e285ea9360c353f0",
            "owner_id": "612162688656",
            "tags": {
              "Name": "TienTV_Terraform_VPC"
            },
            "tags_all": {
              "Name": "TienTV_Terraform_VPC"
            }
          }
        }
      ]
    }
  ]
}